v2.0.3 (2020-1-16)
-------------------
- Fix implment_umap typo in blech_clustering
- Lauching sort_spikes now returns handle to GUI for command-line manipulation

v2.0.2 (2020-1-16)
-------------------
- Add pre_process_for_clustering to dataset, to run all steps prior to clustering
- Fix error from re-factoring spike_sorting.py
- Fix error in delete unit for renaming unit plots
- Add UMAP visualization and cluster splitting to spike sorting

v2.0.1 (2020-1-16)
-------------------
- Fix typo in dataset.py

v2.0.0 (2020-1-15)
-------------------
- Fix spike sorting to re-compute pca after splitting or merging clusters
- Fix held unit analysis to handle multiple matches for single  units by
  choosing units with lowest J3
* Big Changes:
    - Seperate spike detection and spike clustering
    - Make objects to handle spike detection, spike clustering, and spike sorting
    - Make GUI for spike sorting
    - Can now cluster and sort over multiple recordings at once
    - Change file structure occurring from clustering

v1.1.14 (2019-11-23)
--------------------
- Make blech clust use less than all cores, or user specified number of cores

v1.1.13 (2019-11-23)
--------------------
- typo fix

v1.1.12 (2019-11-23)
--------------------
- typo fix

v1.1.11 (2019-11-23)
--------------------
- Add support for digital outputs

v1.1.10, (2010-11-20)
---------------------
- Fix h5io.get_unit_waveforms
- Add initial slope of spike to GMM clustering variables
- make blech_clust use max - 1 cores to help prevent system freeze
    - Allow for user specification of cores to use

v1.1.9, (2019-11-08)
--------------------
- Fix typo in spike_sorting units_similarity
- Critcal Bug Fix:
    - Fix bug with CAR group assignment via GUI 


v1.1.8, (2019-10-28)
--------------------
- Fix typo is experiment creation
- Slight improvement to spike sorting UI
- Fix process status update when no units similarity violations found
- Critical Bug Fix: